# yt-database

./: .env-test  .env.example  .gitignore  PROJECT_STRUCTURE.md  QUOTA_HANDLING_IMPROVEMENTS.md  README.md  data.py  fix_tests.py  main.py  markdown_converter.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_all_tests.py  run_integration_tests.py  run_tests.py  setup.py  test_integration.py  test_markdown_converter.py  test_summary.py  youtube_notion_cli.py  youtube_page.html
.kiro/specs/architecture-restructure/: design.md  requirements.md  tasks.md
.kiro/specs/web-ui-mode/: design.md  requirements.md  tasks.md
.kiro/specs/youtube-video-processing/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
chat_logs/: README.md
src/: __init__.py
src/notion_db/: __init__.py  operations.py
src/utils/: markdown_converter.py
src/youtube_notion/: __init__.py  main.py  queue.py
src/youtube_notion/config/: __init__.py  constants.py  core.py  example_data.py  (+3 more)
tests/: TEST_SUITE_SUMMARY.md  conftest.py  test_cli.py  test_configuration.py  test_end_to_end_timestamps.py  test_error_handling.py  test_exceptions.py  test_gemini_integration.py  test_integration.py  test_interfaces.py  test_main.py  test_main_youtube_integration.py  test_markdown_converter.py  test_metadata_extraction.py  test_notion_operations.py  test_performance.py  test_retry_error_handling.py  test_timestamp_enrichment.py  test_url_validation.py  test_video_metadata_extractor.py  test_youtube_end_to_end.py  test_youtube_performance_comprehensive.py  test_youtube_processor_integration.py
tests/fixtures/: __init__.py  mock_implementations.py  web_test_data.py
tests/integration/: README.md  __init__.py  conftest.py  test_end_to_end_integration.py  test_gemini_integration.py  test_integration.py  test_main_youtube_integration.py  test_setup_validation.py  test_web_ui_integration.py  test_youtube_end_to_end.py  test_youtube_processor_integration.py
tests/unit/: __init__.py  conftest.py  test_chat_logging.py  test_cli.py  test_cli_batch_processing.py  test_component_integration.py  test_comprehensive_error_handling.py  test_configuration.py  test_end_to_end_timestamps.py  test_error_handling.py  test_exceptions.py  test_gemini_summary_writer.py  test_main.py  test_markdown_converter.py  test_metadata_extraction.py  test_mock_implementations.py  test_notion_operations.py  test_notion_storage.py  test_property_based_markdown_converter.py  test_queue.py  test_retry_error_handling.py  test_ui_server.py  test_url_validation.py  test_validation_edge_cases.py  test_video_metadata_extractor.py  test_video_processor.py  test_video_utils.py
web/static/: app.js  index.html  package.json  styles.css  test-chat-log.html  test-sse.html
(+45 files in other folders)
