[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-notion-integration"
version = "1.0.0"
description = "A tool to add YouTube video summaries to Notion databases"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "notion-client",
    "python-dotenv",
    "pytest",
    "google-genai>=0.1.0",
    "google-api-python-client>=2.0.0",
    "requests>=2.25.0",
    "beautifulsoup4",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "pytest-asyncio>=0.21.0",
    "hypothesis",
    "httpx>=0.25.0"
]

[project.scripts]
youtube-notion = "youtube_notion.main:main"
youtube-notion-ui = "youtube_notion.main:main_ui"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers"
]
pythonpath = [
    "src"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests requiring API keys",
    "unit: marks tests as unit tests"
]